--- a/css/style.css
+++ b/css/style.css
@@ -177,15 +177,16 @@ body footer .footer-copy {margin: 0 auto;border-top: 1px solid #616161;margin-to
 
 
 @media (max-width: 2000px) {
-	
+	.menu-list-xs {display:none}
 }
 
 @media (max-width: 1600px) {
-	
+	.menu-list-xs {display:none}
 }
 
-@media (max-width: 560px) {
-	
+@media (max-width: 800px) {
+	.menu-list-lg {display:none}
+	.menu-list-xs {display:block}
 }
 
 @media (max-width: 480px) {
