--- a/css/style.css
+++ b/css/style.css
@@ -7,16 +7,23 @@ a {color:#08e}
 a:hover {color:#f65;-webkit-transition: all 0.3s ease;transition: all 0.3s ease;text-decoration: none;}
 .header-menu {width:100%;min-height:70px;background-color:#fff;border:0;box-shadow: 0 2px 2px 0 rgba(195,195,195,0.5);padding:5px 0;font-size:1.2em;}
 .header-menu .logo-title {font-size:1.5em;color:#555;margin-right:10%;}
-.header-menu .menu-list {margin-top:12px;}
 .header-menu .menu-list a {color:#555;margin-right:10px;;-webkit-transition: all 0.3s ease;transition: all 0.3s ease;text-decoration: none;padding:0 5px;display:inline-block;}
 .header-menu .menu-list a:hover {color:#f65;-webkit-transition: all 0.3s ease;transition: all 0.3s ease;text-decoration: none;border-bottom:5px solid #fa9;}
-.header-menu .current-page {border-bottom:5px solid #f65;}
-.header-menu ion-icon {font-size:28px;color:#999;margin-top:12px;}
-.header-menu ion-icon:hover {color:#333}
+.header-menu .current-page {border-bottom:5px solid #f65;color:#f90 !important}
+.header-menu ion-icon {font-size:24px;margin-top:10px;}
+.header-menu .dropdown ion-icon {color:#999;}
+.header-menu .dropdown ion-icon:hover {color:#08e;}
+.header-menu .dropdown li:hover ion-icon {color:#08e;}
 
-.home-page {width:100%;height:auto;margin-top:70px;}
-.home-page .title {background-color:rgba(0,0,0,0.75);width:100%;right:0 !important;left:0 !important;}
+.home-page {width:100%;height:auto;margin-top:80px;}
+.home-page .title {background-color:rgba(0,0,0,0.5);width:100%;right:0 !important;left:0 !important;padding:35px 0;font-size:1.2em}
 .main-page-home {position:relative;background-color:rgba(255,255,255,0.8);z-index:0;height:auto;width:70%;margin-left:15%;}
+.home-page .breadcrumb {height:36px;line-height:36px;background-color: #eee;padding:2px;margin-bottom:10px;}
+.home-page .news-right {width:100%;height:400px;box-shadow: 1px 3px 5px rgba(195,195,195,0.5)}
+
+
+
+
 .main-page {position:relative;margin-top:70px;background-color:rgba(255,255,255,0.8);z-index:0;height:auto;width:70%;margin-left:15%;}
 
 
