--- a/css/style.css
+++ b/css/style.css
@@ -10,22 +10,22 @@ a:hover {color:#f65;-webkit-transition: all 0.3s ease;transition: all 0.3s ease;
 .header-menu .menu-list a {color:#555;margin-right:10px;;-webkit-transition: all 0.3s ease;transition: all 0.3s ease;text-decoration: none;padding:0 5px;display:inline-block;}
 .header-menu .menu-list a:hover {color:#f65;-webkit-transition: all 0.3s ease;transition: all 0.3s ease;text-decoration: none;border-bottom:5px solid #fa9;}
 .header-menu .current-page {border-bottom:5px solid #f65;color:#f90 !important}
-.header-menu ion-icon {font-size:24px;margin-top:10px;}
-.header-menu .dropdown ion-icon {color:#999;}
-.header-menu .dropdown ion-icon:hover {color:#08e;}
-.header-menu .dropdown li:hover ion-icon {color:#08e;}
+.header-menu i {font-size:24px;margin-top:10px;}
+.header-menu .dropdown i {color:#999;}
+.header-menu .dropdown i:hover {color:#08e;}
+.header-menu .dropdown li:hover [class*="ion-"] {color:#08e;}
 
 .main-page {width:100%;height:auto;margin-top:80px;}
 .main-page .img-title {background-color:rgba(0,0,0,0.5);width:100%;right:0 !important;left:0 !important;bottom:0 !important;padding:35px 0 65px 0;font-size:1.2em}
 .main-page .carousel img{width:100%;height:320px;}
-.main-page .carousel ion-icon{}
+.main-page .carousel i{}
 .main-page .breadcrumb {height:36px;line-height:36px;background-color: #eee;padding:2px;margin-bottom:10px;}
 .main-page .news-right {width:100%;height:320px;background:rgba(195,225,255,0.5)}
 
 .main-page .item-block {width:100%;height:320px;color:#333;background:rgba(205,235,255,0.05);margin-top:20px}
 .main-page .item-block img {width:80%}
 .main-page .item-spectial {width:100%;min-height:320px;color:#333;background:rgba(205,255,205,0.05);margin-top:20px}
-.main-page .item-spectial .links-a img {width:22%;margin-left:3%;margin-top:10px;opacity:1}
+.main-page .item-spectial .links-a img {width:22%;margin-left:2%;margin-top:10px;opacity:1}
 .main-page .item-spectial .links-a img:hover {opacity:0.85}
 .main-page .links-icon img {width:50px;margin-left:10px;opacity:0.5}
 .main-page .links-icon img:hover {opacity:1}
@@ -33,13 +33,13 @@ a:hover {color:#f65;-webkit-transition: all 0.3s ease;transition: all 0.3s ease;
 .portlet-0 {width:100%;color:#333;padding:2px;}
 .portlet-0 .portlet-title {border-bottom:3px solid #fa9;}
 .portlet-0 .portlet-title span {font-size:1.2em;}
-.portlet-0 .portlet-title ion-icon {font-size:1.5em;color:#f65;}
+.portlet-0 .portlet-title i {font-size:1.5em;color:#f65;}
 .portlet-0 .portlet-title a {color:#f65;float:right;margin-right:10px;}
 .portlet-0 .portlet-title a:hover {color:#08e}
 .portlet {width:100%;color:#333;border-left:1px solid #6cf;padding:2px;}
 .portlet .portlet-title {border-bottom:3px solid #6cf;}
 .portlet .portlet-title span {font-size:1.2em;}
-.portlet .portlet-title ion-icon {font-size:1.5em;color:#08e;}
+.portlet .portlet-title i {font-size:1.5em;color:#08e;}
 .portlet .portlet-title a {color:#08e;float:right;margin-right:10px;}
 .portlet .portlet-title a:hover {color:#f65}
 
@@ -91,7 +91,7 @@ a:hover {color:#f65;-webkit-transition: all 0.3s ease;transition: all 0.3s ease;
 
 #gotoTop{display:none;position:fixed;top:90%;left:85%;cursor:pointer;padding:5px 0;width:50px;text-align:center;background:#555;color:#fff;border-radius:50%}
 #gotoTop.hover{background:#D55C42;color:#fff;text-decoration:none;border-radius:0;}
-#gotoTop ion-icon {font-size:2em;line-height:20px}
+#gotoTop i {font-size:2em;line-height:20px}
 
 #comments {background:#fefefe;padding:10px;margin-top:10px;margin-bottom:10px;}
 
@@ -184,15 +184,6 @@ body footer .footer-copy .copyright{text-align:center;color:#aaa !important;back
 .moreinfo .infocontent:hover i {color:#55d846;-webkit-transition: all 0.3s ease;transition: all 0.3s ease}
 .moreinfo .infocontent:hover {padding:2px;background-color: #666;color:#fff;-webkit-transition: all 0.3s ease;transition: all 0.3s ease}
 
-/*滚动条美化*/
-::-webkit-scrollbar{width:10px;height:6px}
-::-webkit-scrollbar-button:vertical{display:none}
-::-webkit-scrollbar-track:vertical{background-color:transparent;}
-::-webkit-scrollbar-track-piece{background-color:transparent;}
-::-webkit-scrollbar-thumb:vertical{background-color:#3792ef;border-radius:6px}
-::-webkit-scrollbar-thumb:vertical:hover,
-::-webkit-scrollbar-thumb:vertical:active {background-color: #2e86ef}
-
 /* Loading */
 .loading-1 {content:url('../img/loading/loading-1.gif');width:20%;margin-left:40%}
 .loading-2 {content:url('../img/loading/loading-2.gif');width:60%;margin-left:20%}
@@ -204,6 +195,15 @@ body footer .footer-copy .copyright{text-align:center;color:#aaa !important;back
 .icon-wechat {content:url('../img/brand/wechat.png');width:32px;}
 .icon-sina {content:url('../img/brand/sina.png');width:32px;}
 .icon-github {content:url('../img/brand/github.png');width:32px;}
+
+/*滚动条美化*/
+::-webkit-scrollbar{width:10px;height:6px}
+::-webkit-scrollbar-button:vertical{display:none}
+::-webkit-scrollbar-track:vertical{background-color:transparent;}
+::-webkit-scrollbar-track-piece{background-color:transparent;}
+::-webkit-scrollbar-thumb:vertical{background-color:#3792ef;border-radius:6px}
+::-webkit-scrollbar-thumb:vertical:hover,
+::-webkit-scrollbar-thumb:vertical:active {background-color: #2e86ef}
 
 
 @media (max-width: 2000px) {
