--- a/css/style.css
+++ b/css/style.css
@@ -223,6 +223,12 @@ body footer .footer-copy .copyright{text-align:center;color:#aaa !important;back
 @media (max-width: 800px) {
 	.menu-list-lg {display:none}
 	.menu-list-xs {display:block}
+	
+	.percent-50 {width:100%;margin-left:0;}
+	.percent-60 {width:100%;margin-left:0;}
+	.percent-70 {width:100%;margin-left:0;}
+	.percent-80 {width:100%;margin-left:0;}
+	.percent-90 {width:100%;margin-left:0;}
 }
 
 @media (max-width: 480px) {
