--- a/css/journal.css
+++ b/css/journal.css
@@ -2,21 +2,44 @@
 * Writen by GaoHR
 * 2019.10
 */
-.journal-type-list {min-height:600px;}
-.journal-type-list .journal-type-list-title {text-align:center;font-size:1.em;}
-.journal-type-list a {display:block;margin:5px;}
-
-.journal-list {min-height:480px;}
-.journal-list .journal-list-title {text-align:center;font-size:1.em;}
-.journal-list a {display:block;margin:5px;}
-
-.journal-info {min-height:480px;}
-.journal-info .journal-info-title {text-align:center;font-size:1.em;}
-
-
-
-
-
-
+*{padding: 0;border: 0;outline: 0;}
+h3{font-weight: normal;}
+.classes-wrap{overflow: hidden;}
+.content{width: 100%;margin: 0 auto;position: relative;}
+.content:after{content: '';clear: both;height: 0;display: block;}
+.clearfix:after{content: " ";display: table;clear: both;width: 100%;}
+.classes-wrap .classes-item{width: 16.66667%;float: left;cursor: pointer;padding: 20px 0 20px;position: relative;z-index: 1;overflow: hidden;}
+.classes-wrap .classes-item.active:after{display: block;}
+.classes-wrap .classes-item:after{content: " ";position: absolute;z-index: 2;background: url(../img/journal/icons.png) no-repeat -56px -235px;width: 36px;height: 18px;bottom: 0;left: 50%;margin-left: -18px;display: none;}
+.classes-wrap .classes-item .icon{width: 71px;height: 55px;background-image: url(../img/journal/icons.png);background-repeat: no-repeat;display: block;margin: 0 auto;}
+.classes-wrap .classes-item.active .text{color: #000;font-weight: 700;}
+.classes-wrap .classes-item .text{font-size: 16px;color: #535353;display: block;text-align: center;font-weight: 400;margin-top: 15px;}
+.classes-wrap .classes-item .icon.icon-login{background-position: -286px -160px;}
+.classes-wrap .classes-item:hover .icon.icon-login,
+.classes-wrap .classes-item.active .icon.icon-login{background-position: -286px -10px;}
+.classes-wrap .classes-item .icon.icon-config{background-position: -10px -85px;}
+.classes-wrap .classes-item:hover .icon.icon-config,
+.classes-wrap .classes-item.active .icon.icon-config{background-position: -102px -85px;}
+.classes-wrap .classes-item .icon.icon-award{background-position: -286px -85px;}
+.classes-wrap .classes-item:hover .icon.icon-award,
+.classes-wrap .classes-item.active .icon.icon-award{background-position: -195px -84px;}
+.classes-wrap .classes-item .icon.icon-manage{background-position: -10px -10px;}
+.classes-wrap .classes-item:hover .icon.icon-manage,
+.classes-wrap .classes-item.active .icon.icon-manage{background-position: -102px -160px;}
+.classes-wrap .classes-item .icon.icon-verifcation{background-position: -194px -160px;}
+.classes-wrap .classes-item:hover .icon.icon-verifcation,
+.classes-wrap .classes-item.active .icon.icon-verifcation{background-position: -10px -160px;}
+.classes-wrap .classes-item .icon.icon-wechat{background-position: -194px -10px;}
+.classes-wrap .classes-item:hover .icon.icon-wechat,
+.classes-wrap .classes-item.active .icon.icon-wechat{background-position: -102px -10px;}
+/*内容*/
+.list-wrap{min-height:540px;background: #fff;padding: 20px;box-shadow: 0 0 10px rgba(0, 0, 0, 0.08);margin-bottom:50px;box-sizing: border-box;display: none;}
+.list-wrap.active{display: block;}
+.list-wrap .list-title{font-size: 22px;color: #000;margin-bottom: 20px;}
+.list-wrap .list-title .icon-question{width: 26px;height: 29px;display: inline-block;vertical-align: -8px;margin-right: 10px;background: url(../img/journal/icons.png) no-repeat -10px -235px;}
+.list-wrap .list-content .list-item{display: block;padding: 32px 0 32px 13px;position: relative;z-index: 1;border-bottom: 1px solid #e5e5e5;font-size: 16px;line-height: 21px;}
+.list-wrap .list-content .list-item a{text-decoration: none;color: #535353;}
+.list-wrap .list-content .list-item a:hover{color: #4381fd;}
+.list-wrap .list-content .list-item a:before{content: " ";background: #b2b2b2;width: 4px;height: 4px;border-radius: 50%;-webkit-border-radius: 50%;-moz-border-radius: 50%;-ms-border-radius: 50%;-o-border-radius: 50%;position: absolute;z-index: 1;top: 42px;left: 0;}
 
 
