--- a/css/journal.css
+++ b/css/journal.css
@@ -49,4 +49,5 @@ h3{font-weight: normal;}
 .journal-name .rank-1 {background:#f00}
 .journal-name .rank-2 {background:#f80}
 .journal-name .rank-3 {background:#fc0}
+.journal-name-list .active {color:#fff;background:#08e;}
 
