--- a/css/style.css
+++ b/css/style.css
@@ -193,6 +193,7 @@ body footer .footer-copy .copyright{text-align:center;color:#aaa !important;back
 /* Loading */
 .loading-1 {content:url('../img/loading/loading-1.gif');width:20%;margin-left:40%}
 .loading-2 {content:url('../img/loading/loading-2.gif');width:60%;margin-left:20%}
+.loading-3 {content:url('../img/loading/loading-3.gif');width:60%;margin-left:20%}
 .loading-earth {content:url('../img/loading/loading-earth.gif');width:30%;margin-left:35%}
 .loading-earth-s {content:url('../img/loading/loading-earth-s.gif');width:20%;margin-left:40%}
 
